welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:11: error: type mismatch;
 found   : Boolean
 required: Int
	speed == speed + 5;
              ^